# photo_exif

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
docs/: SPEC.md
src/: app.rs  lib.rs  main.rs
src/config/: settings.rs
src/exif/: formatter.rs  gpx.rs  mod.rs  reader.rs  repair.rs  validator.rs  writer.rs
src/io/: file_ops.rs  image_loader.rs  mod.rs
src/model/: image_state.rs  mod.rs
src/ui/: compare.rs  exif_panel.rs  gpx_window.rs  left_panel.rs  mod.rs  preview.rs  repair_window.rs  shortcuts.rs  thumbnail_bar.rs  toolbar.rs
