[package]
name = "photo_exit"
version = "0.1.1"
edition = "2021"

[lib]
name = "photo_exit"
path = "src/lib.rs"

[[bin]]
name = "photo_exit"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", features = ["glow"] }
egui = "0.27"
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff", "bmp"] }
exif = { git = "https://github.com/kamadak/exif-rs.git", rev = "7cb491cd22aa4a586f37c0c0c3ef5c9ae207d337" }
rfd = { version = "0.17", features = ["common-controls-v6"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
quick-xml = "0.40"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
